rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__optimization_tests__algebraic_simplification.snap
---
source: libs/integration_tests/src/optimization_tests.rs
assertion_line: 17
expression: output
---
## Unoptimized Output

j main
main:
move r8 5
mul r1 r8 1
move r9 r1

## Optimized Output

move r8 5
move r1 5
move r9 5
