rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__optimization_tests__constant_folding.snap
---
source: libs/integration_tests/src/optimization_tests.rs
assertion_line: 10
expression: output
---
## Unoptimized Output

j main
main:
move r8 15

## Optimized Output

move r8 15
